# src/main/java/com/bank_example/transaction_service/infraestructure/out/persistence/models/TransactionDoc.java
@@ -13,8 +13,10 @@ public class TransactionDoc {
 
     private String id;
     private String productId;
+    private String counterProductId;
     private BigDecimal amount;
     private TransactionType type;
     private String description;
     private Instant createdAt;
+    private String operationId;
 }
