# src/main/resources/api.yml
@@ -66,20 +66,19 @@ components:
       type: object
       required:
         - productId
+        - counterProductId
         - amount
-        - type
       properties:
         productId:
+          type: string
+          description: ID del producto financiero afectado
+        counterProductId:
           type: string
           description: ID del producto financiero afectado
         amount:
           type: number
           format: double
           description: Monto de la transacción
-        type:
-          type: string
-          enum: [INCOME, EXPENSE]
-          description: Tipo de transacción
         description:
           type: string
           description: Detalle de la operación
